<resources>
    <string name="app_name">PortDuSaguenay</string>
    <string name="title_activity_course_creation_map">CourseCreationMap</string>
    <string name="sign">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="log">LOG IN</string>
    <string name="next">CONTINUE</string>
    <string name="forgot">FORGOT PASSWORD</string>
    <string name="course">Course</string>
    <string name="history">History</string>
    <string name="profil">Profil</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="distance">Distance</string>
    <string name="difficulty">Difficulty :</string>
    <string name="interests">Interests</string>
    <string name="rating">Rating</string>
    <string name="disponibility">Disponibility</string>
    <string name="times">Times</string>
    <string name="chat">Chat</string>
    <string name="photos">Photos</string>
    <string name="friends">Friends</string>
    <string name="create">CREATE</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="feed">Feed</string>
    <string name="qr_code">qr_code</string>
    <string name="enter_your_info">Enter your info</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="toggle_flash">Toggle Flash</string>
    <string name="action_settings">Settings</string>
    <string name="scanned_data">Scanned Data</string>
    <string name="creation">Creation</string>
    <string name="get_to_location">Get to Location</string>
    <string name="create_group">Create Group</string>
    <string name="join_course">Join Course</string>
    <string name="name">Name:</string>
    <string name="itemCount">item_count</string>
    <string name="submit">Submit</string>
    <string name="ranking">Ranking :</string>
</resources>